feat: Upgrade Java EE to Jakarta EE 10 and update dependencies
- Updated Java version from 8 to 21 and Maven from 3.6.3 to 3.9.12.
- Migrated from Java EE 7 to Jakarta EE 10 API for compatibility with Tomcat 11.
- Replaced old javax.* dependencies with their Jakarta.* counterparts.
- Updated JAXB and logging libraries to mitigate known CVEs.
- Refactored file upload handling to use built-in Jakarta Servlet 6.0 multipart support.
- Replaced deprecated Log4j 1.x with Log4j 2.x for improved security.
- Updated HTTP client to Apache HttpClient 5.x to address vulnerabilities.
- Migrated from Nashorn to GraalVM JavaScript engine for script execution.
- Refactored utility classes to remove deprecated methods and improve security checks.
- Updated web.xml to use Jakarta EE 6.0 schema.
- Added log4j2.xml configuration for logging setup.
- Introduced AGENTS.md for internal instructions.